--- a/jitter-free-membership.tex
+++ b/jitter-free-membership.tex
@@ -787,7 +787,7 @@ in $\QI{e(b_i)}$.
 Then, if $\ell$ has not yet emitted $\prop{i}{b_i}$ then it it chooses one of
 the values for instance $i$ (which eventually exists), modifies $v_i(b_i)$ as
 appropriate, broadcasts $\prop{i}{b_i}$ and waits to receive acceptances from a
-quorum of nodes in $\QI{e(i)}$. When enough acceptances have been received, it
+quorum of nodes in $\QII{e(i)}$. When enough acceptances have been received, it
 may decide $\chosen{i}{b_i}$ as required. \end{proof}
 
 \subsection{Fully concurrent configuration changes}
